# dietz

./: .gitignore  README.md  pyproject.toml
dietz/: __main__.py
dietz/generation/: __init__.py  run.py
dietz/songs/: __init__.py  authorship.py  song.py  songbook.py
notes/: research.md  todo.txt
scripts/: get-ugledk.py
